2004-12-08 Marius Mauch <genone@gentoo.org>
	* equery: implemented the --category option
	* glsa-check: fixed the bug where it wanted to unnecessary merge masked packages
	
2004-11-29 Karl Trygve Kalleberg <karltk@gentoo.org>
	* branched v0-3-0: major rework in equery is in progess. the main
	branch is reserved for minor and incremental fixups.

2004-10-20 Karl Trygve Kalleberg <karltk@gentoo.org>
	* release.sh: New script that automates the relase of a new
		gentoolkit relase. Only works for gentoolkit-dev at the
		moment.
	* src/echangelog/Makefile: Fixed spurious '}'
	* Released gentoolkit-dev-0.2.1

2004-10-31 Marius Mauch <genone@gentoo.org>
	* qpkg: security fix for bug #68846

2004-10-20 Karl Trygve Kalleberg <karltk@gentoo.org>
	* etcat: fixed get_use_vars to get_use_flags, fixes #67349.

2004-10-18 Karl Trygve Kalleberg <karltk@gentoo.org>
	* gentoolkit: collapsed ChangeLog into base ChangeLog
	* gentoolkit: reverted indenting back to tabs, due to loud protests from Marius;)
	* equery: collapsed ChangeLog into base ChangeLog
	* equery: reverted indenting back to tabs, due to loud protests from Marius;)
	* equery: minor syntactical cleanups.
	* equery: minor documentation improvements
	* equery: added errors module that will hold various types of internal errors raised.
	* equery: added try block around on md5sum check, which fails on various conditions like
				insufficient permission or stale temporary checksum files.
	
2004-10-17 Marius Mauch <genone@gentoo.org>
	* equery: fix for bug #67473 (checking md5sums of prelinked binaries)
	* equery: fix for bug #67275 (--nocolor didn't work as configure was 
				called before parsing the arguments
	* equery: changed defaults for `equery depends` as making a depgraph
				for the full portage tree isn't a good idea and find_all_packages()
				uses way to much memory currently
	* euse: replaced the old perl version with a newly written bash version.

2004-10-12 Marius Mauch <genone@gentoo.org>